BUILD fix deprecation warning for URL constructor